ADD: meta tags and stylesheet link

--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Résumé</title>
-  </head>
-  <body>
-    ― Hello World! &#x1F609;
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="description" content="My very own personal website.">
+  <title>Résumé</title>
+  <link rel="stylesheet" href="https://volodymyrkushnir.com/assets/stylesheets/base.css">
+</head>
+
+<body>
+  ― Hello World! &#x1F609;
+</body>
+
 </html>
