--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
                   <div class="divider"></div>
                 </div>
                 <div class="sixteen wide column">
-                  <!-- Intro -->
+                  <h2>Résumé</h2>
+                  <p>&mdash; He is the most successful person<strong style="margin-left: 0.0625em;">*</strong>
+                    ever to run for the presidency, by far. I strive
+                    His IQ is one of the
+                    highest ― and you all know it!</p>
                 </div>
               </div>
             </div>
