FIX: validation fixes

--- a/index.html
+++ b/index.html
@@ -49,18 +49,18 @@
                           <defs>
                             <style>
                               .cls-1 {
-                                fill: url(#radial-gradient);
+                                fill: url(#radial-gradient-twitter);
                               }
                             </style>
-                            <radialGradient id="radial-gradient" cx="30.34" cy="30.34" r="30.34"
+                            <radialGradient id="radial-gradient-twitter" cx="30.34" cy="30.34" r="30.34"
                               gradientUnits="userSpaceOnUse">
                               <stop offset="0" stop-color="#3c3c3c" />
                               <stop offset="0.78" />
                             </radialGradient>
                           </defs>
                           <title>fadfas2323</title>
-                          <g id="Слой_2" data-name="Слой 2">
-                            <g id="OBJECTS">
+                          <g>
+                            <g>
                               <path class="cls-1"
                                 d="M51.81,8.89a30.36,30.36,0,1,0,8.88,21.45A30.28,30.28,0,0,0,51.81,8.89ZM43.2,23.74c.42,9.34-6.54,19.74-18.86,19.74a18.79,18.79,0,0,1-10.16-3A13.35,13.35,0,0,0,24,37.76a6.65,6.65,0,0,1-6.2-4.62,6.71,6.71,0,0,0,3-.1,6.64,6.64,0,0,1-5.32-6.59,6.73,6.73,0,0,0,3,.83,6.64,6.64,0,0,1-2.06-8.86A18.82,18.82,0,0,0,30.1,25.35,6.64,6.64,0,0,1,41.41,19.3a12.88,12.88,0,0,0,4.21-1.62,6.66,6.66,0,0,1-2.92,3.68,13.51,13.51,0,0,0,3.81-1A13.46,13.46,0,0,1,43.2,23.74Z" />
                             </g>
@@ -96,9 +96,9 @@
                             <radialGradient id="radial-gradient-3" cx="30.34" cy="30.34" r="30.34"
                               xlink:href="#radial-gradient" />
                           </defs>
-                          <title>Ресурс 12323</title>
-                          <g id="Слой_2" data-name="Слой 2">
-                            <g id="OBJECTS">
+                          <title>svg</title>
+                          <g>
+                            <g>
                               <path class="cls-1"
                                 d="M30.34,24.79a5.55,5.55,0,1,0,5.56,5.55A5.55,5.55,0,0,0,30.34,24.79Z" />
                               <path class="cls-2"
@@ -436,8 +436,10 @@
                   <p><small>1990</small></p>
                   <p>Published a book "Trump: Surviving at the Top" in coauthorship with Charles Leerhsen</p>
                 </li>
+               <li>
                 <p><small>1987</small></p>
                 <p>Published a book "Trump: The Art of the Deal" in coauthorship with Tony Shwartz</p>
+               </li>
               </ul>
               <h3>Education</h3>
             <ul class="timeline">
